objects/Competitive_Landscape__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Competitive Landscapes</relationshipLabel>
        <relationshipName>Competitive_Landscapes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <label>Business Area</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>2F - CMS Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3B - Apps Information Management and Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3F - BPO CRM, Cards and Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3I - BPO DPS, F&amp;L and Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3M - BPO F&amp;A, HR and Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3N - Apps Cloud, Mobility and Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3O - Enterprise Cloud Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6N - Data Center Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8L - CMS Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9W - CMS Solution Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Life Cycle Mgmt (ALM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Security &amp; Fortify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Services GBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps &amp; Server Platforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ArcSight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bladesystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPO- Business Process Outsourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Critical Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business PCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Service Management (BSM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Business_Group__c</controllingField>
            <picklistValues>
                <fullName>Applications and Business Solutions (ABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy/IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Security Products (ESP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics Solution Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology Outsourcing (ITO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Management (ITM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services (MPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertica</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Additional Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_1_Current_Share_of_Wallet__c</fullName>
        <label>Competitor 1 Current Share of Wallet(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Landscapes (Competitor 1)</relationshipLabel>
        <relationshipName>Competitive_Landscapes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_2_Current_Share_of_Wallet__c</fullName>
        <label>Competitor 2 Current Share of Wallet(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Landscapes (Competitor 2)</relationshipLabel>
        <relationshipName>Competitive_Landscapes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_3_Current_Share_of_Wallet__c</fullName>
        <label>Competitor 3 Current Share of Wallet(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Landscapes (Competitor 3)</relationshipLabel>
        <relationshipName>Competitive_Landscapes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_HP_Share_of_Wallet__c</fullName>
        <label>Current HP Share of Wallet(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <picklist>
            <picklistValues>
                <fullName>Need to Retain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Plans to Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_of_Competitive_Landscape__c</fullName>
        <label>Summary of Competitive Landscape</label>
        <picklist>
            <picklistValues>
                <fullName>Controlled by HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controlled by 1 Main Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Across Multiple Competitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Clear Leaders – open opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Competitive Landscape</label>
    <nameField>
        <displayFormat>Competitive-{0000}</displayFormat>
        <label>Competitive Landscape Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Landscapes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>